# sage

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  config.example.toml  deploy.sh
apps/sage-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/sage-desktop/src-tauri/capabilities/: default.json
apps/sage-desktop/src-tauri/icons/: icon.icns
apps/sage-desktop/src-tauri/src/: commands.rs  main.rs  notification.m  notification.rs  tray.rs
apps/sage-desktop/src-tauri/src/commands/: chat.rs  dashboard.rs  email.rs  feed.rs  memory.rs  pages.rs  (+5 more)
crates/sage-channels/: Cargo.toml
crates/sage-channels/src/: applescript.rs  channels.rs  lib.rs
crates/sage-channels/src/channels/: calendar.rs  email.rs  email_filter.rs  hooks.rs  wechat.rs
crates/sage-cli/: Cargo.toml
crates/sage-cli/src/: app.rs  main.rs  ui.rs
crates/sage-core/: Cargo.toml
crates/sage-core/prompts/en/: calibrator_reflect.md  chat_memory_write_protocol.md  chat_safety_protocol.md  cmd_analyze_message_flow_system.md  cmd_analyze_message_flow_user.md  cmd_dashboard_brief_system.md  cmd_extract_memories_system.md  cmd_extract_memories_user.md  cmd_first_impression_system.md  cmd_first_impression_user.md  cmd_import_ai_memory_user.md  cmd_summarize_channel.md  cmd_task_extraction_system.md  cmd_verification_system.md  cmd_verification_user.md  coach_system_suffix.md  coach_user.md  evolution_compile_axiom.md  evolution_compile_axiom_evidence.md  evolution_compile_semantic.md  evolution_condense.md  evolution_distill_beliefs.md  evolution_link.md  evolution_merge.md  evolution_synthesize.md  evolution_unified.md  feed_deep_note.md  feed_deep_read.md  feed_digest_system.md  feed_digest_user.md  feed_filter.md  memory_integrator.md  mirror_system_suffix.md  mirror_user.md  mirror_weekly_system.md  mirror_weekly_user.md  observer_system.md  observer_user.md  page_gen_system.md  person_extract.md  (+13 more)
crates/sage-core/prompts/zh/: calibrator_reflect.md  chat_memory_write_protocol.md  chat_safety_protocol.md  cmd_analyze_message_flow_system.md  cmd_analyze_message_flow_user.md  cmd_dashboard_brief_system.md  cmd_extract_memories_system.md  cmd_extract_memories_user.md  cmd_first_impression_system.md  cmd_first_impression_user.md  cmd_import_ai_memory_user.md  cmd_summarize_channel.md  cmd_task_extraction_system.md  cmd_verification_system.md  cmd_verification_user.md  coach_system_suffix.md  coach_user.md  evolution_compile_axiom.md  evolution_compile_axiom_evidence.md  evolution_compile_semantic.md  evolution_condense.md  evolution_distill_beliefs.md  evolution_link.md  evolution_merge.md  evolution_synthesize.md  evolution_unified.md  feed_deep_note.md  feed_deep_read.md  feed_digest_system.md  feed_digest_user.md  feed_filter.md  memory_integrator.md  mirror_system_suffix.md  mirror_user.md  mirror_weekly_system.md  mirror_weekly_user.md  observer_system.md  observer_user.md  page_gen_system.md  person_extract.md  (+13 more)
crates/sage-core/src/: applescript.rs  bridge.rs  bridge_api.rs  calibrator.rs  channel.rs  channels.rs  coach.rs  config.rs  context_gatherer.rs  daemon.rs  discovery.rs  feedback.rs  guardian.rs  heartbeat.rs  lib.rs  memory_evolution.rs  memory_integrator.rs  mirror.rs  oauth2.rs  observer.rs  onboarding.rs  person_observer.rs  persona.rs  pipeline.rs  plugin.rs  profile.rs  prompts.rs  provider.rs  questioner.rs  reconciler.rs  reflective_detector.rs  router.rs  session_analyzer.rs  similarity.rs  skills.rs  staleness.rs  store.rs  strategist.rs  task_intelligence.rs  text_utils.rs  (+1 more)
crates/sage-core/src/channels/: email.rs  feed.rs  outlook.rs
crates/sage-core/src/pipeline/: actions.rs  harness.rs  invoker.rs  meta.rs  parser.rs  stages.rs
crates/sage-core/src/store/: bridge.rs  memories.rs  messages.rs  migrations.rs  observations.rs  pages.rs  profile.rs  providers.rs  questions.rs  reflective.rs  sessions.rs  tasks.rs  tests.rs
crates/sage-llm/: Cargo.toml
crates/sage-llm/src/: agent.rs  config.rs  discovery.rs  lib.rs  provider.rs
crates/sage-store/: Cargo.toml
crates/sage-store/src/: bridge.rs  context.rs  email.rs  graph.rs  lib.rs  memories.rs  messages.rs  migrations.rs  observations.rs  pipeline.rs  profile.rs  reports.rs  similarity.rs  suggestions.rs  tasks.rs  tests.rs
sage/: .gitignore  Cargo.toml  README.md  config.example.toml
sage-daemon/: Cargo.toml  config.toml
sage-daemon/heartbeat/: HEARTBEAT.md
sage-daemon/launchd/: com.sage.daemon.plist
sage-daemon/memory/: MEMORY.md
sage-daemon/scripts/: install.sh
sage-daemon/sidecar/wechat-bridge/: index.ts  package.json
sage-daemon/src/: agent.rs  applescript.rs  channel.rs  channels.rs  config.rs  daemon.rs  heartbeat.rs  main.rs  memory.rs  provider.rs  router.rs
sage-daemon/src/channels/: calendar.rs  email.rs  hooks.rs  notification.rs  wechat.rs
sage/apps/sage-desktop/: package-lock.json  package.json
sage/apps/sage-desktop/src/: App.css  App.tsx  types.ts
sage/apps/sage-desktop/src-tauri/: Cargo.toml  tauri.conf.json
sage/crates/sage-core/: Cargo.toml
sage/crates/sage-core/src/: agent.rs  applescript.rs  bridge.rs  channels.rs  coach.rs  config.rs  context_gatherer.rs  daemon.rs  discovery.rs  feedback.rs  guardian.rs  heartbeat.rs  hint_router.rs  lib.rs  memory.rs  memory_evolution.rs  mirror.rs  observer.rs  onboarding.rs  persona.rs  profile.rs  provider.rs  questioner.rs  reliable_provider.rs  router.rs  scrub.rs  session_analyzer.rs  skills.rs  store.rs  strategist.rs
sage/crates/sage-daemon/: Cargo.toml
sage/crates/sage-daemon/src/: main.rs
sage/crates/sage-ingest/: Cargo.toml
sage/crates/sage-ingest/src/: main.rs
sage/crates/sage-types/src/: lib.rs
sage/docs/plans/: 2026-03-09-smart-reports.md  2026-03-09-zeroclaw-patterns.md
sage/extensions/chrome/: background.js  manifest.json
sage/extensions/chrome/content-scripts/: chatgpt.js  claude.js  gemini.js  teams.js
sage/extensions/chrome/popup/: popup.css  popup.html  popup.js
sage/scripts/: install.sh
sage/skills/: README.md
sage/skills/sage-chat-companion/: SKILL.md
sage/sop/: SAGE_SOP.md
(+118 files in other folders)
