[workspace]
resolver = "2"
members = [
    "crates/sage-types",
    "crates/sage-store",
    "crates/sage-llm",
    "crates/sage-channels",
    "crates/sage-core",
    "crates/sage-cli",
    "apps/sage-desktop/src-tauri",
]

[workspace.package]
version = "0.1.9"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "fs", "io-util", "signal"] }
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
imap = "2.4"
mailparse = "0.15"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
native-tls = "0.2"
base64 = "0.22"
urlencoding = "2"
open = "5"
sha2 = "0.10"
rand = "0.8"

sage-types = { path = "crates/sage-types" }
sage-store = { path = "crates/sage-store" }
sage-llm = { path = "crates/sage-llm" }
sage-channels = { path = "crates/sage-channels" }
sage-core = { path = "crates/sage-core" }


tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
