[package]
name = "sage-channels"
version.workspace = true
edition.workspace = true

[dependencies]
sage-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
imap = { workspace = true }
mailparse = { workspace = true }
lettre = { workspace = true }
native-tls = { workspace = true }
base64 = { workspace = true }
open = { workspace = true }
