[package]
name = "sage-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
ratatui = { version = "=0.28.1", default-features = false, features = ["crossterm"] }
crossterm = "=0.28.1"
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sage-core = { workspace = true }
sage-types = { workspace = true }
