[package]
name = "sage-core"
version.workspace = true
edition.workspace = true

[dependencies]
sage-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
imap = { workspace = true }
mailparse = { workspace = true }
lettre = { workspace = true }
native-tls = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tower = { workspace = true }
