[package]
name = "sage-llm"
version.workspace = true
edition.workspace = true

[dependencies]
sage-types = { workspace = true }
sage-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
