[package]
name = "sage-store"
version.workspace = true
edition.workspace = true

[dependencies]
sage-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"
