[package]
name = "sage-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
sage-core = { workspace = true }
sage-types = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
chrono = { workspace = true }
dirs = "5"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
regex = "1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-deep-link = { workspace = true }
url = "2"

[build-dependencies]
tauri-build = { workspace = true }
