[package]
name = "sage-ingest"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sage-ingest"
path = "src/main.rs"

[dependencies]
sage-core = { path = "../sage-core" }
sage-types = { path = "../sage-types" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
